--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <body>
 
-	<!-- Jogo Dino Race -->
+	<!-- Tiozao Jogo da Velha -->
 	<div id="todas">
 		<div class="moldura-um">
 			<div class="moldura-dois">
@@ -94,12 +94,7 @@
 	
 	
 
-	<!-- Biscoito do Tiozao -->
-	
-
-
-
-
+    <!-- Biscoito do Tiozao -->	
     <div class="footer">
         <footer>
             <p>&copy; Bellacosa Adventures 2021</p>
