--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="Author" content="Vagner Bellacosa">
     <meta name="Keywords" content="Tiosao Jogo da Velha Javascript Games Developers Digital Innovation One">
     <meta name="description" content="Exercicio de BootCamp Javascript Games Developers, baseado no design
-    original de Gabriela Pinheiro, utilizando codificaçao Javascript, css e html para testar e colocar em pratica e conhecer novos comandos.
+    original de Vitor Ruschoni, utilizando codificaçao Javascript, css e html para testar e colocar em pratica e conhecer novos comandos.
 	Inspirado no famoso, antigo e tradicional jogo da velha, o jogo favorito dos alunos pre-pdas e internet.">
 
  	<!-- Redes Sociais -->
